Correction TpCompteBancaireAdoWPF Part 1

--- a/DotNET/Code/FormationDotNET/TpCompteBancaireAdoWPF/TpCompteBancaireAdoWPF.csproj
+++ b/DotNET/Code/FormationDotNET/TpCompteBancaireAdoWPF/TpCompteBancaireAdoWPF.csproj
@@ -5,11 +5,10 @@
     <TargetFramework>net6.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
-    <ApplicationIcon>bin\Release\net6.0-windows\img\Icone.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Include="bin\Release\net6.0-windows\img\Icone.ico" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
   </ItemGroup>
 
 </Project>
