--- a/DotNET/Code/FormationDotNET/TpCompteBancaireAdoWPF/TpCompteBancaireAdoWPF.csproj
+++ b/DotNET/Code/FormationDotNET/TpCompteBancaireAdoWPF/TpCompteBancaireAdoWPF.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="4.0.1" />
   </ItemGroup>
 
 </Project>
