--- a/DotNET/Code/FormationDotNET/TpListePersonneWPF/TpListePersonneWPF.csproj
+++ b/DotNET/Code/FormationDotNET/TpListePersonneWPF/TpListePersonneWPF.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="4.0.1" />
   </ItemGroup>
 
 </Project>
