--- a/DotNET/Code/FormationDotNET/ApiRestCrudEtudiant/ApiRestCrudEtudiant.csproj
+++ b/DotNET/Code/FormationDotNET/ApiRestCrudEtudiant/ApiRestCrudEtudiant.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="4.0.1" />
     <PackageReference Include="System.Data.Common" Version="4.1.0" />
     <PackageReference Include="System.IO" Version="4.3.0" />
     <PackageReference Include="System.Linq.Queryable" Version="4.0.1" />
